jena-shex/src/test/files/spec/negativeSyntax/IRIREF-with-bad-UCHAR.1.shex
# IRIREF with bad UCHAR.1
# source: turtle-syntax-bad-uri-02.ttl
<http://a.example/IssueShape> {
   <http://a.example/\u00p1> .
}
